# freebsd-ports

./: .cirrus.yml  .gitignore  Makefile.ports
Mk/: bsd.port.mk
Mk/Uses/: display.mk  fonts.mk  gnome.mk  kde.mk  localbase.mk  meson.mk  qmake.mk  ssl.mk  xorg-cat.mk  xorg.mk
accessibility/accerciser/: pkg-plist
accessibility/at-spi2-core/: pkg-plist
accessibility/caribou/: pkg-plist
accessibility/eflite/: pkg-plist
accessibility/kmag/: pkg-plist
accessibility/kmousetool/: pkg-plist
accessibility/kmouth/: pkg-plist
accessibility/orca/: pkg-plist
accessibility/redshift/: pkg-plist
accessibility/speech-dispatcher/: Makefile  pkg-plist
archivers/advancecomp/: pkg-plist
archivers/arj/: pkg-plist
archivers/ark/: pkg-plist
archivers/atool/: pkg-plist
archivers/bzip2/: pkg-plist
archivers/cabextract/: pkg-plist
archivers/cmdpack/: pkg-plist
archivers/dact/: pkg-plist
archivers/dpkg/: pkg-plist
archivers/engrampa/: pkg-plist
archivers/gcab/: pkg-plist
archivers/gcpio/: pkg-plist
archivers/gtar/: pkg-plist
archivers/gzip/: pkg-plist
archivers/lhasa/: pkg-plist
archivers/libarchive/: Makefile
archivers/libcomprex/: pkg-plist
archivers/libdynamite/: pkg-plist
archivers/liblz4/: pkg-plist
archivers/liblzxcomp/: pkg-plist
archivers/libzip/: Makefile  pkg-plist
archivers/lizard/: pkg-plist
archivers/lrzip/: pkg-plist
devel/electron13/files/: patch-build_config_ozone.gni  patch-build_toolchain_gcc__toolchain.gni  patch-src_third__party_wayland_features.gni  patch-ui_events_keycodes_dom_keycode__converter.cc
(+4330 files in other folders)
