--- src/third_party/wayland/features.gni.orig	2022-05-29 21:47:45.948957000 -0400
+++ src/third_party/wayland/features.gni	2022-05-29 21:48:03.045866000 -0400
@@ -13,7 +13,7 @@
                           default_toolchain != "//build/toolchain/cros:target"
 
   # Path to wayland-scanner. Has effect only when the system libwayland is used.
-  assert(host_os == "linux")
+  assert(host_os == "linux" || host_os == "freebsd")
   system_wayland_scanner_path = "/usr/bin/wayland-scanner"
 
   # This may be set by Chromium packagers who do not wish to use the bundled
